# openmm-nonbonded-slicing

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CMakeLists.txt  FindOPENCL.cmake  FindOpenCL.cmake  LICENSE.md  README.md  cmake_command.sh  cuda22.cpp  debug_test  test.ipynb
.github/workflows/: CI.yml  CudaToolkit.yml  Doc.yml  Linux.yml  MacOS.yml
devtools/conda-envs/: build-cudatoolkit-11.8.yml  build-doc.yml  build-macos-11.yml  build-macos-13.yml  build-ubuntu-18.04.yml  build-ubuntu-20.04.yml  build-ubuntu-22.04.yml  rtd_env.yml
devtools/conda-recipes/anaconda/: build.sh  meta.yaml
devtools/scripts/: from_native_to.sh  install_amd_opencl.sh  rename.sh  rtd_pre_build.sh  rtd_pre_install.sh
docs/: CMakeLists.txt  authors.html  authors.rst  changelog.html  conf.py  contributing.html  contributing.rst  environment.yaml  genindex.html  index.html  index.rst  objects.inv  overview.html  overview.rst  references.html  references.rst  refs.bib  requirements.txt  search.html  searchindex.js  theory.html  theory.rst
docs/_sources/: authors.rst.txt  index.rst.txt  overview.rst.txt  theory.rst.txt
docs/_sources/pythonapi/: SlicedNonbondedForce.rst.txt  index.rst.txt
docs/_static/: custom.css  make_logo.py
docs/pythonapi/: SlicedNonbondedForce.html  SlicedPmeForce.rst  index.html  index.rst
openmmapi/include/: ExampleKernels.h  NativeNonbondedForce.h  NativeNonbondedKernels.h  NonbondedSlicingKernels.h  PmeSlicingKernels.h  SlicedNonbondedForce.h  SlicedPmeForce.h
openmmapi/include/internal/: AssertionUtilities.h  NativeNonbondedForceImpl.h  SlicedNonbondedForceImpl.h  SlicedPmeForceImpl.h  windowsExportNativeNonbonded.h  windowsExportNonbondedSlicing.h  windowsExportPmeSlicing.h
openmmapi/src/: NativeNonbondedForce.cpp  NativeNonbondedForceImpl.cpp  SlicedNonbondedForce.cpp  SlicedNonbondedForceImpl.cpp  SlicedPmeForce.cpp  SlicedPmeForceImpl.cpp
python/: CMakeLists.txt  exampleplugin.i  nativenonbondedplugin.i  nonbondedslicing.i  pmeslicing.i  setup.py
python/tests/: CMakeLists.txt  TestNativeNonbondedForce.py  TestSlicedNonbondedForce.py  TestSlicedPmeForce.py
serialization/include/: NativeNonbondedForceProxy.h  SlicedNonbondedForceProxy.h  SlicedPmeForceProxy.h
serialization/src/: ExampleSerializationProxyRegistration.cpp  NativeNonbondedForceProxy.cpp  NativeNonbondedSerializationProxyRegistration.cpp  NonbondedSlicingSerializationProxyRegistration.cpp  PmeSlicingSerializationProxyRegistration.cpp  SlicedNonbondedForceProxy.cpp  SlicedPmeForceProxy.cpp
serialization/tests/: CMakeLists.txt  TestSerializeNativeNonbondedForce.cpp  TestSerializeSlicedNonbondedForce.cpp  TestSerializeSlicedPmeForce.cpp
tests/: TestNativeNonbondedForce.h  TestSlicedNonbondedForce.h  TestSlicedPmeForce.h
